fix gap and font

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -31,6 +31,7 @@
 }
 
 .nav-menu__link{
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.3;
@@ -153,8 +154,13 @@
     justify-content: center;
     gap: 32px;
     margin-top: 100px;
+
+@media (min-width: 768px) {
+    gap: 40px;
+    }
 }
 .mobile-menu__link{
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 32px;
     line-height: 1.22;
